Working add jwt auth
