# laravel.pv113.com/app/Http/Controllers/Api/AuthController.php
@@ -1,0 +1,73 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Validator;
+use Symfony\Component\HttpFoundation\Response;
+
+class AuthController extends Controller
+{
+    /**
+     * @OA\Post(
+     *   path="/api/login",
+     *   tags={"Auth"},
+     *   summary="Login",
+     *   operationId="login",
+     *   @OA\RequestBody(
+     *     required=true,
+     *     description="User login data",
+     *     @OA\MediaType(
+     *       mediaType="application/json",
+     *       @OA\Schema(
+     *         required={"email", "password"},
+     *         @OA\Property(property="email", type="string"),
+     *         @OA\Property(property="password", type="string"),
+     *       )
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=200,
+     *     description="Success",
+     *     @OA\MediaType(
+     *       mediaType="application/json"
+     *     )
+     *   ),
+     *   @OA\Response(
+     *     response=401,
+     *     description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *     response=400,
+     *     description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *     response=404,
+     *     description="Not Found"
+     *   ),
+     *   @OA\Response(
+     *     response=403,
+     *     description="Forbidden"
+     *   )
+     * )
+     */
+    public function login(Request $request) {
+        $validation = Validator::make($request->all(),[
+            'email'=> 'required|email',
+            'password'=> 'required|string|min:6'
+        ], [
+            'email.required' => 'Пошта є побов\'язковим.',
+            'email.email' => 'Пошта є невалідною.',
+            'password.required' => 'Пароль не може буть пустим.',
+            'password.min' => 'Довжина пароля має бути мінімум 6 символів.',
+        ]);
+        if($validation->fails()) {
+            return response()->json($validation->errors(), Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+        if(!$token = auth()->attempt($validation->validated())) {
+            return response()->json(['error'=>'Не вірно вказано дані!'], Response::HTTP_UNAUTHORIZED);
+        }
+        return response()->json(['token'=>$token], Response::HTTP_OK);
+    }
+}
